# kursova

./: CMakeLists.txt  Commands.txt  LICENSE  README.md  character.cpp  character.h  main.cpp  test2.cpp
HANGMAN/: CMakeLists.txt  HANGMAN.cpp  HANGMAN.h  main.cpp
PONG/: CMakeLists.txt  PONG.cpp  PONG.h  main.cpp
TICTACTOE/: TICTACTOE.cpp  main.cpp
WAR/: CMakeLists.txt  card.cpp  card.h  deck.cpp  deck.h  main.cpp
almost finished full product - Toni/: CMakeLists.txt  RockPapperScissors.cpp  RockPapperScissors.h  card.cpp  card.h  character.h  hangman.cpp  hangman.h  main.cpp  tictactoe.cpp  tictactoe.h
battleships/: CMakeLists.txt
hangman/: CMakeLists.txt  hangman.h  main.cpp
lifeSimulator/: character.cpp  lifeSimulator.cpp
pong/: CMakeLists.txt  main.cpp  pong.cpp  pong.h
snakeandladder/: board.h
tetris/: CMakeLists.txt
tictactoe/: CMakeLists.txt  main.cpp  tictactoe.cpp  tictactoe.h
